Changes between 1.4.1 and 1.4.2
===============================

Pertinent to users:

1. Fixed another bug with the WSGI application creation code.  (Thanks
   Christine!)

2. Added instructions for installing PyBlosxom with mod_wsgi to
   ``install_wsgi.txt``.  This includes a basic wsgi script for PyBlosxom.
   (Thanks Christine!)


Changes between 1.4 and 1.4.1
=============================

Pertinent to users:

1. Fixed a problem where running PyBlosxom under Paste won't pick up
   the ``config.py`` file.  Be sure to add a ``configpydir`` property to
   your ``blog.ini`` file which points to the directory your ``config.py``
   file is in.

2. Fixed a problem where running PyBlosxom in Python 2.5 won't pick up
   the ``config.py`` file.

3. Merged Ryan's optimization to Walk (removes an os.listdir call).

4. Updated documentation.


Changes between 1.3.2 and 1.4
=============================

Pertinent to users:
-------------------

1. Added a pyblcmd command line program for PyBlosxom command line
   things.  This now handles static rendering, rendering a single
   url to stdout, testing your blog setup, ...

2. The Atom story template now has a $default_flavour bit in the link.
   Bug 1667937.  (Thanks Michael!)

3. PyBlosxom is now locale aware in respects to dates, months, days of the
   week and such.  Users should set the locale config property to a
   valid locale if they don't want English.

4. Added a ``blog_icbm`` config variable for use in the ICBM meta tag.  See
   config_variables.txt for more information.

5. Changed the ``num_entries`` property in config.py from 40 to a much more
   conservative 5.  Also changed the default value from 0 to 5 if you
   happened not to set ``num_entries`` at all.
   http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=373658
   (Thanks Jon!)

6. Changed the self link in the atom feed to be of type
   application/atom+xml.
   http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=403008
   (Thanks Brian!)
